Edited portable gaming device page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span id="nameLetter6" class="letter fw-bold" data-sentence="BA Fan"><span class="first-letter button">N</span></span>
                     </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-5 d-flex align-items-center justify-content-center">
                     <img src="media/profile/liam_profile.webp" class="profile-pic">
                 </div>
             </div>
@@ -64,20 +64,21 @@
             <div class="row">
                 <h1 class="text-decoration-underline" style="font-variant: small-caps">About Me</h1>
                 <ul class="fs-3 list-group">
-                    <li class="list-group-item">I am a Validation Engineer at Texas Instruments.</li>
-                    <li class="list-group-item">I graduated from the University of Texas at Dallas with a Bachelors of Science in Computer Engineering and a Masters of Science in Computer Engineering.</li>
-                    <li class="list-group-item">I make video games.</li>
-                    <li class="list-group-item">I love basketball.</li>
+                    <li class="list-group-item">I am a Validation Engineer at Texas Instruments</li>
+                    <li class="list-group-item">I graduated summa cum laude with a B.S. and M.S in Computer Engineering from the University of Texas at Dallas</li>
+                    <li class="list-group-item">I make video games</li>
+                    <li class="list-group-item">I love basketball</li>
                 </ul>
             </div>
             <br>
             <br>
-            <div class="row">
-                <h1 class="text-decoration-underline" style="font-variant: small-caps">Links</h1>
+            <br>
+            <br>
+            <div class="row text-center">
                 <ul class="fs-3 list-unstyled">
-                    <a class="btn btn-dark mb-2" style="background-color: #0077b5" target="_blank" href="https://www.linkedin.com/in/liamsilagan/" role="button"><i class="fab fa-linkedin"></i></a>
-                    <a class="btn btn-dark mb-2" style="background-color: #000000" target="_blank" href="https://github.com/LyoRex" role="button"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark mb-2" style="background-color: #777777" target="_blank" href="https://leoroko.itch.io/" role="button"><i class="fab fa-itch-io"></i></a>
+                    <a class="btn btn-dark mb-2" style="background-color: #0077b5" target="_blank" href="https://www.linkedin.com/in/liamsilagan/" role="button"><i class="fab fa-3x fa-linkedin"></i></a>
+                    <a class="btn btn-dark mb-2" style="background-color: #000000" target="_blank" href="https://github.com/LyoRex" role="button"><i class="fab fa-3x fa-github"></i></a>
+                    <a class="btn btn-dark mb-2" style="background-color: #777777" target="_blank" href="https://leoroko.itch.io/" role="button"><i class="fab fa-3x fa-itch-io"></i></a>
                 </ul>
             </div>
         </main>
